# business-crm-fastapi

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: main.py
app/api/: deps.py  router.py
app/api/v1/: activity.py  appointments.py  auth.py  clients.py  employees.py  services.py
app/core/: config.py  enums.py  security.py
app/db/: seed.py  session.py
app/models/: __init__.py  activity.py  appointment.py  client.py  employee.py  service.py  user.py
app/repositories/: activity.py  appointment.py  base.py  client.py  employee.py  service.py  user.py
app/schemas/: activity.py  appointment.py  auth.py  client.py  common.py  employee.py  service.py
app/services/: activity.py  appointment.py  auth.py  client.py  employee.py  service.py
docs/: api-examples.http
docs/screenshots/: README.md
scripts/: entrypoint.sh
tests/: conftest.py  test_appointments.py  test_auth.py  test_clients.py
